fix: Desktop searchbar link overflows

--- a/src/features/recommendations/components/header.module.scss
+++ b/src/features/recommendations/components/header.module.scss
@@ -12,6 +12,7 @@
    -webkit-tap-highlight-color: transparent;
    display: flex;
    flex-direction: row;
+
 }
 
 .navbarFixed {
@@ -39,6 +40,8 @@
    box-shadow: $header-shadow 0 6px 4px -6px;
    justify-content: space-between;
 align-content: center;
+
+
 
 
 }
@@ -81,7 +84,7 @@ align-content: center;
   outline: none;
    box-shadow: none;
    -webkit-tap-highlight-color: transparent;
-  // background-color: darkcyan;
+
 
 }
 
@@ -172,7 +175,10 @@ align-content: center;
     width: 100%;
     max-height: 150px;
     height: fit-content;
+ 
   }
+
+ 
 }
 
 .withBack {
@@ -305,11 +311,12 @@ align-content: center;
   justify-content: space-between;
   margin-right: 0px;
   padding-right: 20px;
+  height: 100%;
   @include xs-to-sm {
    
     display: none;
   }
-  //background-color: pink;
+
   max-width: 400px;
   @include xs-to-md {
     display: none;
