--- a/src/features/recommendations/components/recommendation/recommendation.module.scss
+++ b/src/features/recommendations/components/recommendation/recommendation.module.scss
@@ -126,8 +126,10 @@
   font-weight: 600;
   white-space: nowrap;
   text-overflow: ellipsis;
-  max-width: 200px;
+  width: 80%;
+  max-width: 600px;
   overflow: hidden;
+ 
 }
 
 .country {
